feat: added part of the frontend
