# apps/api/src/controllers/fridge/handlers/getallproducts.handler.ts
@@ -1,9 +1,49 @@
 import { plainToInstance } from "class-transformer";
-import { prisma } from "../../../lib/prisma";
 import { ProductView } from "../../../contracts/product.view";
+import { prisma } from "../../../lib/prisma";
 
-export const getAllProducts = async (userId: string) => {
-	const res = await prisma.product.findMany({ where: { ownerId: userId } });
+export const getAllProducts = async (
+	userId: string,
+	location?: string,
+	fridgeId?: string,
+) => {
+	const where: {
+		ownerId: string;
+		fridgeId?: {
+			contains: string;
+			mode: "insensitive";
+		};
+		fridge?: {
+			location: {
+				contains: string;
+				mode: "insensitive";
+			};
+		};
+	} = {
+		ownerId: userId,
+	};
 
-	return plainToInstance(ProductView, res, { excludeExtraneousValues: true });
+	if (fridgeId) {
+		where.fridgeId = {
+			contains: fridgeId,
+			mode: "insensitive",
+		};
+	}
+
+	if (location) {
+		where.fridge = {
+			location: {
+				contains: location,
+				mode: "insensitive",
+			},
+		};
+	}
+
+	const products = await prisma.product.findMany({
+		where,
+	});
+
+	return plainToInstance(ProductView, products, {
+		excludeExtraneousValues: true,
+	});
 };
